# demo-microservicios

./: README.md  docker-compose.yml
servicio-1/: main.py  mqtt_reader.py  pyproject.toml
servicio-2/: Dockerfile  main.py  pyproject.toml
servicio-3/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
servicio-3/api/: __init__.py  challenge.py
servicio-3/models/: database.py  models.py
servicio-3/services/: influx_service.py
