[project]
name = "servicio-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "cryptography>=44.0.2",
    "databases>=0.9.0",
    "fastapi>=0.115.12",
    "influxdb-client>=1.48.0",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]
